--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -33,3 +33,19 @@ a {
     text-decoration: underline;
   }
 }
+
+h1{
+  margin: 0;
+}
+
+img{
+  width: 100%;
+}
+
+ul{
+  list-style-type: square;
+
+  li{
+    margin-top: 10px;
+  }
+}
