--- a/stylesheets/base/_typography.scss
+++ b/stylesheets/base/_typography.scss
@@ -4,4 +4,8 @@
 body {
   color: $text-color;
   font: normal 125% / 1.4 $text-font-stack;
+
+  @media(min-width: 768px){
+    font-size: 1rem;
+  }
 }
